[package]
name = "bp-relayers"
description = "Primitives of relayers module."
version = "0.7.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["bit-vec", "derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["bit-vec", "derive"] }

# Bridge Dependencies

bp-header-chain = { path = "../header-chain", default-features = false }
bp-messages = { path = "../messages", default-features = false }
bp-parachains = { path = "../parachains", default-features = false }
bp-runtime = { path = "../runtime", default-features = false, features = ["test-helpers"] }

# Substrate Dependencies

frame-system = { path = "../../../substrate/frame/system", default-features = false }
frame-support = { path = "../../../substrate/frame/support", default-features = false }
pallet-utility = { path = "../../../substrate/frame/utility", default-features = false }
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false }
sp-std = { path = "../../../substrate/primitives/std", default-features = false }

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4"

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-parachains/std",
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-utility/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
