[package]
name = "bp-xcm-bridge-hub"
description = "Primitives of the xcm-bridge-hub pallet."
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
serde = { features = ["alloc", "derive"], workspace = true }

# Bridge Dependencies

bp-messages = { path = "../messages", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }

# Substrate Dependencies

frame-support = { path = "../../../substrate/frame/support", default-features = false }
sp-std = { path = "../../../substrate/primitives/std", default-features = false }

# Polkadot Dependencies
xcm = { package = "staging-xcm", path = "../../../polkadot/xcm", default-features = false }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"serde/std",
	"sp-std/std",
	"xcm/std",
]
