[package]
name = "sp-virtualization"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Spawn a new polkavm instance from within the runtime/pvf"
documentation = "https://docs.rs/sp-polkavm"
readme = "README.md"

[dependencies]
log = { version = "0.4.20", default-features = false }
polkavm = { git = "https://github.com/koute/polkavm.git", rev = "3552524a248a025de8e608394fcf9eb7c528eb11", optional = true }
sp-io = { path = "../io", default-features =  false }
sp-std = { path = "../std", default-features = false}

[features]
default = [ "std" ]
std = [
	"log/std",
	"polkavm",
	"sp-io/std",
	"sp-std/std",
]
