[package]
name = "polkadot-node-core-approval-voting-parallel"
version = "7.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Approval Voting Subsystem running approval work in parallel"

[lints]
workspace = true

[dependencies]
futures = "0.3.30"
futures-timer = "3.0.2"
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["bit-vec", "derive"] }
gum = { package = "tracing-gum", path = "../../gum" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
schnellru = "0.2.1"
merlin = "3.0"
schnorrkel = "0.11.4"
kvdb = "0.13.0"
derive_more = "0.99.17"
thiserror = { workspace = true }
itertools = "0.11"

polkadot-node-core-approval-voting = { path = "../approval-voting"}
polkadot-approval-distribution = { path = "../../network/approval-distribution"}


polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-jaeger = { path = "../../jaeger" }

sc-keystore = { path = "../../../../substrate/client/keystore", default-features = false }
sp-consensus = { path = "../../../../substrate/primitives/consensus/common", default-features = false }
sp-consensus-slots = { path = "../../../../substrate/primitives/consensus/slots", default-features = false }
sp-application-crypto = { path = "../../../../substrate/primitives/application-crypto", default-features = false, features = ["full_crypto"] }
sp-runtime = { path = "../../../../substrate/primitives/runtime", default-features = false }
polkadot-node-network-protocol = { path = "../../network/protocol" }
polkadot-node-metrics = { path = "../../metrics" }

rand = "0.8.5"

# rand_core should match schnorrkel
rand_core = "0.6.2"
rand_chacha = { version = "0.3.1" }

[dev-dependencies]
async-trait = "0.1.79"
parking_lot = "0.12.1"
sp-keyring = { path = "../../../../substrate/primitives/keyring" }
sp-keystore = { path = "../../../../substrate/primitives/keystore" }
sp-core = { path = "../../../../substrate/primitives/core" }
sp-consensus-babe = { path = "../../../../substrate/primitives/consensus/babe" }
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
kvdb-memorydb = "0.13.0"
polkadot-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
log = { workspace = true, default-features = true }
env_logger = "0.11"

polkadot-subsystem-bench = { path = "../../subsystem-bench" }

